Moved files to JS folder.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	<body>
 		 <div id="mapid" style="width: 100vw; height: 100vh;">
 		 </div>
-		<script src="./initMap.js">
+		<script src="./js/initMap.js">
 		</script>
-		<script src="./displayCases.js">
+		<script src="./js/displayCases.js">
 		</script>
 
 	</body>
