Added About page. Minor changes in index page.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html>
+	<title>
+		COVID19 Tracker World Map
+	</title>
 	<head>
-		 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" 
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" 
 		       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" 
 		       crossorigin=""/>
-
 		  <!-- Make sure you put this AFTER Leaflet's CSS -->
- 		 <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+ 		<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
    			 integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" 
 			 crossorigin=""></script>
 		
-		 <script src="https://code.jquery.com/jquery-3.4.1.js"
+		<script src="https://code.jquery.com/jquery-3.4.1.js"
 			integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-			crossorigin="anonymous"></script>	
+			crossorigin="anonymous"></script>
+
+		<link rel="stylesheet" href="./css/header.css"/>
+
+
 	</head>
-	<body>
-		 <div id="mapid" style="width: 100vw; height: 100vh;">
-		 </div>
+	<body style="background-color: #f0f0f5;">
+		
+		<div>
+			<a href="./about.html" style="text-decoration: none; color: #33334d">About</a>
+			<a href="https://ko-fi.com/55abhilash" style="text-decoration: none; color: #33334d">&nbspDonate</a>
+			<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" style="text-decoration: none; color: #33334d">&nbspCopyright</a>
+		</div>
+
+		<div id="mapid" style="width: 100vw; height: 100vh;">
+		</div>
 		<script src="./js/initMap.js">
 		</script>
 		<script src="./js/displayCases.js">
 		</script>
+
 
 	</body>
 </html>
