--- a/about.html
+++ b/about.html
@@ -1,37 +1,64 @@
-<html>
-	<head>
-		<h1 align="center">
-			About: COVID19 Tracker World Map
-		</h1>
-	</head>
-	<body style="background-image: './img/corona_back.gif'; background-size: cover;">
-		<div align="center" style="padding: 55px;">
-		<p>
-			Hello! Thank you for using <websitename>! <br>
-			<br>
-			<br>
-			This project is created by <a href="https://github.com/55abhilash">55abhilash</a>. It is based on the API Endpoint <a href="https://corona.lmao.ninja/countries">https://corona.lmao.ninja/countries</a>. <br>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+</head>
+
+<body>
+    <section>
+        <nav class="navbar navbar-fixed navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="index.html">Covid 19</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="about-us.html">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Donate</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </section>
+
+    <section>
+	    <div><br></div>
+	    <h1 align="center">About: Corona Tracker World Map</h1> <br>
+                       <div align="left" style="margin-left: 400px; margin-right: 500px">
+                <p>
+                        Hello! Thank you for using the Corona Tracker World Map tool! <br>
+                        <br>
+                        <br>
+                        This project is created by <a href="https://github.com/55abhilash">55abhilash</a>. It is based on the API Endpoint <a href="https://corona.lmao.ninja/countries">https://corona.lmao.ninja/countries</a>. <br>
 <br>
-			This endpoint fetches latest data about COVID19 from WorldOMeter, which is a reliable source for statistical information. <br>
-			<br>
-			<br>
-			If you have any feedback/suggestions, or if you want to check the source code, go <a href="https://github.com/55abhilash/covid19_tracker">here.</a> <br>
-			Feedback can be provided in 'Issues' on Github. <br>
-			<br>
-			<br>
-			If you like this tool, you can support my work by buying me a coffee!<br>
-			<div><script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#e07c43', 'S6S61JFRG');kofiwidget2.draw();</script> </div><br>
-				<br>
-				<br>
-			The source code of this tool is licensed under Apache 2.0 license. <br>
-			<br>
-			The website contents are licensed under Creative Commons. <br> 
-			<br>
-			Libraries and content used: Leaflet.js, OpenStreetMap, OpenMapBox Tile Layer. <br>
-			<br>
-			<div>
-			<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</div>
-		</p></div>
-		<h1> Finally, stay safe and follow #SocialDistancing to fight this Pandemic! </h1>
-	</body>
+This endpoint fetches latest data about COVID19 from WorldOMeter, which is a reliable source <br>for statistical information. <br>
+                        <br>
+                        If you have any feedback/suggestions, or if you want to check the source code, go <a href="https://github.com/55abhilash/covid19_tracker">here.</a> <br>
+                        Feedback can be provided in 'Issues' on Github. <br>
+                        <br>
+                        If you like this tool, you can support my work by buying me a coffee!<br>
+                        <div><script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#e07c43', 'S6S61JFRG');kofiwidget2.draw();</script> </div><br>
+                                <br>
+                        The source code of this tool is licensed under Apache 2.0 license. <br>
+                        <br>
+                        The website contents are licensed under Creative Commons. <br>
+                        <br>
+                        Libraries and content used: Leaflet.js, OpenStreetMap, OpenMapBox Tile Layer. <br>
+                        <br>
+                        <div>
+                        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</div>
+                </p></div>
+                <h1> Finally, stay safe and follow #SocialDistancing to fight this Pandemic! </h1>
+ 
+    </section>
+</body>
+
 </html>
