--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <section>
         <nav class="navbar navbar-fixed navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">Covid 19</a>
+            <a class="navbar-brand" href="index.html">COVID 19</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -32,26 +32,25 @@
     <section>
 	    <div><br></div>
 	    <h1 align="center">About: Corona Tracker World Map</h1> <br>
-                       <div align="left" style="margin-left: 400px; margin-right: 500px">
+	    <!--    <div align="left" style="margin-left: 200px; margin-right: 200px">-->
+                      <div align="center" style="margin-left: 300px; margin-right: 300px">
                 <p>
                         Hello! Thank you for using the Corona Tracker World Map tool! <br>
                         <br>
                         <br>
                         This project is created by <a href="https://github.com/55abhilash">55abhilash</a>. It is based on the API Endpoint <a href="https://corona.lmao.ninja/countries">https://corona.lmao.ninja/countries</a>. <br>
 <br>
-This endpoint fetches latest data about COVID19 from WorldOMeter, which is a reliable source <br>for statistical information. <br>
+This endpoint fetches latest data about COVID19 from WorldOMeter, which is a reliable source for statistical information. <br>
                         <br>
-                        If you have any feedback/suggestions, or if you want to check the source code, go <a href="https://github.com/55abhilash/covid19_tracker">here.</a> <br>
-                        Feedback can be provided in 'Issues' on Github. <br>
+                        If you have any feedback/suggestions, or if you want to check the source code, go <a href="https://github.com/55abhilash/covid19_tracker">here.</a> Feedback can be provided in 'Issues' on Github. <br>
                         <br>
                         If you like this tool, you can support my work by buying me a coffee!<br>
                         <div><script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#e07c43', 'S6S61JFRG');kofiwidget2.draw();</script> </div><br>
                                 <br>
-                        The source code of this tool is licensed under Apache 2.0 license. <br>
+				<h3 align="center">Licensing</h3><br>
+				The source code of this tool is licensed under <a href="https://github.com/55abhilash/covid19_tracker/blob/master/LICENSE">Apache 2.0 license.</a><br>
                         <br>
-                        The website contents are licensed under Creative Commons. <br>
-                        <br>
-                        Libraries and content used: Leaflet.js, OpenStreetMap, OpenMapBox Tile Layer. <br>
+			Libraries and content used: <a href="https://leafletjs.com/">Leaflet.js</a>, <a href="https://openstreetmap.org/">OpenStreetMap</a>, <a href="https://www.mapbox.com">OpenMapBox.</a><br>
                         <br>
                         <div>
                         <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</div>
