--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	<section>
 		<nav class="navbar navbar-fixed navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="index.html">Covid 19</a>
+			<a class="navbar-brand" href="index.html">COVID 19</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
