--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<a class="nav-link" href="./about.html">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Donate</a>
+						<a class="nav-link" href="https://ko-fi.com/55abhilash">Donate</a>
 					</li>
 				</ul>
 			</div>
