--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="about-us.html">About Us</a>
+                        <a class="nav-link" href="about-us.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Donate</a>
