--- a/about.html
+++ b/about.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<title>
+	COVID19 Tracker World Map		
+</title>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +59,7 @@ This endpoint fetches latest data about COVID19 from WorldOMeter, which is a rel
                         <div>
                         <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</div>
                 </p></div>
-                <h1> Finally, stay safe and follow #SocialDistancing to fight this Pandemic! </h1>
+                <h1 align="center">Finally, stay safe and follow #SocialDistancing to fight this Pandemic! </h1>
  
     </section>
 </body>
