--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="about-us.html">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Donate</a>
@@ -30,34 +30,62 @@
     </section>
 
     <section>
-	    <div><br></div>
-	    <h1 align="center">About: Corona Tracker World Map</h1> <br>
-	    <!--    <div align="left" style="margin-left: 200px; margin-right: 200px">-->
-                      <div align="center" style="margin-left: 300px; margin-right: 300px">
-                <p>
-                        Hello! Thank you for using the Corona Tracker World Map tool! <br>
-                        <br>
-                        <br>
-                        This project is created by <a href="https://github.com/55abhilash">55abhilash</a>. It is based on the API Endpoint <a href="https://corona.lmao.ninja/countries">https://corona.lmao.ninja/countries</a>. <br>
-<br>
-This endpoint fetches latest data about COVID19 from WorldOMeter, which is a reliable source for statistical information. <br>
-                        <br>
-                        If you have any feedback/suggestions, or if you want to check the source code, go <a href="https://github.com/55abhilash/covid19_tracker">here.</a> Feedback can be provided in 'Issues' on Github. <br>
-                        <br>
-                        If you like this tool, you can support my work by buying me a coffee!<br>
-                        <div><script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#e07c43', 'S6S61JFRG');kofiwidget2.draw();</script> </div><br>
-                                <br>
-				<h3 align="center">Licensing</h3><br>
-				The source code of this tool is licensed under <a href="https://github.com/55abhilash/covid19_tracker/blob/master/LICENSE">Apache 2.0 license.</a><br>
-                        <br>
-			Libraries and content used: <a href="https://leafletjs.com/">Leaflet.js</a>, <a href="https://openstreetmap.org/">OpenStreetMap</a>, <a href="https://www.mapbox.com">OpenMapBox.</a><br>
-                        <br>
-                        <div>
-                        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</div>
-                </p></div>
-                <h1> Finally, stay safe and follow #SocialDistancing to fight this Pandemic! </h1>
- 
+        <div><br></div>
+        <h1 align="center">About: Corona Tracker World Map</h1> <br>
+        <!--    <div align="left" style="margin-left: 200px; margin-right: 200px">-->
+        <div align="center" style="margin-left: 300px; margin-right: 300px">
+            <p>
+                Hello! Thank you for using the Corona Tracker World Map tool! <br>
+                <br>
+                <br>
+                This project is created by <a href="https://github.com/55abhilash">55abhilash</a>. It is based on the
+                API Endpoint <a href="https://corona.lmao.ninja/countries">https://corona.lmao.ninja/countries</a>. <br>
+                <br>
+                This endpoint fetches latest data about COVID19 from WorldOMeter, which is a reliable source for
+                statistical information. <br>
+                <br>
+                If you have any feedback/suggestions, or if you want to check the source code, go <a
+                    href="https://github.com/55abhilash/covid19_tracker">here.</a> Feedback can be provided in 'Issues'
+                on Github. <br>
+                <br>
+                If you like this tool, you can support my work by buying me a coffee!<br>
+                <div>
+                    <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script>
+                    <script
+                        type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#e07c43', 'S6S61JFRG'); kofiwidget2.draw();</script>
+                </div><br>
+                <br>
+                <h3 align="center">Licensing</h3><br>
+                The source code of this tool is licensed under <a
+                    href="https://github.com/55abhilash/covid19_tracker/blob/master/LICENSE">Apache 2.0 license.</a><br>
+                <br>
+                Libraries and content used: <a href="https://leafletjs.com/">Leaflet.js</a>, <a
+                    href="https://openstreetmap.org/">OpenStreetMap</a>, <a
+                    href="https://www.mapbox.com">OpenMapBox.</a><br>
+                <br>
+                <div>
+                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img
+                            alt="Creative Commons License" style="border-width:0"
+                            src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is
+                    licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative
+                        Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</div>
+            </p>
+        </div>
+        <h1> Finally, stay safe and follow #SocialDistancing to fight this Pandemic! </h1>
+
     </section>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
