Added Github link on main page.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<img src="./img/ajax-loader.gif" width="32px" height="32px"/>
 	</div>
 
-	<section>
+	<section id="head">
 		<nav class="navbar navbar-fixed navbar-expand-lg navbar-dark bg-dark">
 			<a class="navbar-brand" href="index.html">COVID 19</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -49,6 +49,11 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="https://ko-fi.com/55abhilash">Donate</a>
+					</li>
+					<li class="nav-item" role="img">
+						<a class="nav-link" href="https://github.com/55abhilash/covid19_tracker">
+							<img width="25px" height="25px" src="./img/github_white.png" />
+						</a>
 					</li>
 				</ul>
 			</div>
